Compiler/src/main/java/Testing/Tests/SemanticTests/AST/failing/NoReturnInMethod.ru
/? Descripción: caso de prueba que si el método devuelve un tipo, debe tener un return
/? Salida esperada:
/? ERROR: SEMANTICO - SENTENCIAS
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | Linea 10 | COLUMNA 4 | EL METODO NO TIENE RET
struct A{}
impl A{
.(){}
fn m1() -> Int{
Char c;
if(true){
ret 2;}else{
ret 3;}
    }
}

start{}